# bosdi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  openvaf_internals.md  pyproject.toml  setup.py
.github/workflows/: pre-commit.yml  release.yml  test.yml
docs/: openvaf-adce-cslot-bridge-bug.md  openvaf-feature-unopt-mir-with-split.md  osdi-technical-reference.md
src/: lib.rs  osdi_debug.py  osdi_jax.py  osdi_loader.py  osdi_shim.cpp
src/bosdi/: __init__.py
src/bosdi/circulax/: __init__.py  osdi_component.py  va_component.py
src/bosdi/va/: __init__.py  __main__.py  binding.py  dump_parser.py  emitter.py  interpret.py  ir_client.py  lowering.py  mir.py  sccp.py  uniform_params.py  va_defaults.py
tests/: capacitor_va.va  conftest.py  test_bsim4_model_card.py  test_compiled_models.py  test_diode_behaviour.py  test_diode_structure.py  test_ir_client_json.py  test_osdi.py  test_osdi_debug.py
tests/devices/: resistor_va.va
tests/fixtures/: bsim4v82_nmos.json
