[package]
name = "bosdi"
version = "0.1.2"  # Keep in sync with pyproject.toml [project].version
edition = "2021"
description = "Rust core for BOSDI: batched OSDI device model evaluation via libloading + Rayon"
license = "MIT"

[lib]
crate-type = ["staticlib"]
name = "bosdi"

[dependencies]
lazy_static = "1.4"
libloading = "0.8"
rayon = "1.8"
